fixed nav-collapse

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1,6 +1,6 @@
 @import "twitter/bootstrap/bootstrap";
 body { padding-top: 0px; }
-
+span.badge { padding: 0px 9px 0px; margin: 0 3px 0 0; color: white; }
 @import "twitter/bootstrap/responsive";
 
 // Set the correct sprite paths
@@ -27,3 +27,5 @@ body { padding-top: 0px; }
 //
 // Example:
 // @linkColor: #ff0000;
+
+
